[package]
name = "gunyah-test-vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ack-bindings = ["gunyah/ack-bindings", "vmm/ack-bindings"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
derive_more = "0.99.18"
vmm = { path = "./vmm" }
gunyah = { path = "./gunyah" }
page_size = "0.6.0"
vm-superio = "0.7.0"

[workspace]
members = [".", "gunyah-bindings", "gunyah", "vmm"]
